src/test/ui/issues/issue-52023-array-size-pointer-cast.stderr
error[E0658]: casting pointers to integers in constants is unstable (see issue #51910)
  --> $DIR/issue-52023-array-size-pointer-cast.rs:12:17
   |
LL |     let _ = [0; (&0 as *const i32) as usize]; //~ ERROR casting pointers to integers in constants
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(const_raw_ptr_to_usize_cast)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
